workshop/generatedContent/kube101/Lab4/guestbook-ingress-host.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress-host
  labels:
    app: guestbook
spec:
  rules:
    - host: gb-user###.PROXYIP.xip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: guestbook
              servicePort: 3000
