workshop/generatedContent/kube101/Lab4/guestbook-ingress-path.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress-path
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /gb-user###
        backend:
          serviceName: guestbook
          servicePort: 3000
